--- a/15/powers.yaml
+++ b/15/powers.yaml
@@ -4255,6 +4255,7 @@ links:
             fabric:load_conditions:
                 desc: Checks if namespaces or mods are loaded, and loads this power if true.
                 unspec: none
+                gap: true
                 type: object
                 props:
                     condition:
