--- a/15/powers.yaml
+++ b/15/powers.yaml
@@ -4252,20 +4252,9 @@ links:
                         bientity_condition:
                             desc: If set, mobs will ignore the entity with this power if they and the entity meet this condition.
                             link: bi_entity_cond
-        fabric:load_conditions:
-            desc: Checks if namespaces or mods are loaded, and loads this power if true.
-            unspec: none
-            type: object
-            props:
-                condition:
-                    desc: What condition to check for
-                    enum: ['fabric:any_mod_loaded','fabric:all_mods_loaded','fabric:any_namespace_loaded','fabric:all_namespaces_loaded']
-                values:
-                    desc: List of namespaces
-                    type: list
-                    vals:
-                        type: string
-                        allow: '*a-z0-9_#\/:.-'
+            fabric:load_conditions:
+                desc: Checks for the following namespaces or mods to be loaded and loads the power of true
+                link: fabric_load_conditions
     custom_power_base:
         title: custom
         type: object
@@ -4669,6 +4658,20 @@ links:
                             desc: The pitch at which the sound will play.
                             type: number
                             default: 1
+    fabric_load_conditions:
+        desc: Checks if namespaces or mods are loaded, and loads this power if true.
+        unspec: none
+        type: object
+        props:
+            condition:
+                desc: What condition to check for
+                enum: ['fabric:any_mod_loaded','fabric:all_mods_loaded','fabric:any_namespace_loaded','fabric:all_namespaces_loaded']
+            values:
+                desc: List of namespaces
+                type: list
+                vals:
+                    type: string
+                    allow: '*a-z0-9_#\/:.-'
 hooks: [preserve_single]
 or:
   - title: simple
