--- a/15/powers.yaml
+++ b/15/powers.yaml
@@ -4617,20 +4617,25 @@ links:
     apugli_weighted_sound_event:
         desc: Either a Identifier that defines the sound event or an Object which defines a sound event with volume and pitch alongside weight.
         href: https://apugli.readthedocs.io/en/latest/types/data_types/weighted_sound_event
-        type: object
-        props:
-            sound:
-                desc: The namespace and ID of the sound to play along with pitch and volume.
-                link: apugli_sound_event_vol_pitch
-            sounds:
-                desc: The namespace and ID of the sounds to play along with pitch and volume.
-                type: list
-                vals:
+        or:
+          - title: string
+            type: string
+            desc: The namespace and ID of the sound to play.
+            allow: '*a-z0-9_#\/:.-'
+          - title: object
+            type: object
+            props:
+                sound:
+                    desc: The namespace and ID of the sound to play along with pitch and volume.
                     link: apugli_sound_event_vol_pitch
-            weight:
-                desc: The weight for the sound effect to play in a randomiser. The higher this is, the more likely it'll be selected.
-                type: integer
-                default: 1
+                sounds:
+                    desc: The namespace and ID of the sounds to play along with pitch and volume.
+                    type: list
+                    vals:
+                        link: apugli_sound_event_vol_pitch
+        weight:
+            desc: The weight for the sound effect to play in a randomiser. The higher this is, the more likely it'll be selected.
+            type: integer
     apugli_sound_event_vol_pitch:
         desc: Either a Identifier that defines the sound event or an Object which defines a sound event with pitch and volume.
         href: https://apugli.readthedocs.io/en/latest/types/data_types/sound_event_with_volume_and_pitch
@@ -4647,11 +4652,9 @@ links:
                 volume:
                     desc: The volume at which the sound will play.
                     type: number
-                    default: 1
                 pitch:
                     desc: The pitch at which the sound will play.
                     type: number
-                    default: 1
     fabric_load_conditions:
         desc: Checks if namespaces or mods are loaded, and loads this power if true.
         type: object
