--- a/12/powers.yaml
+++ b/12/powers.yaml
@@ -4159,6 +4159,8 @@ links:
             name:
                 desc: (Optional) A descriptive name for the modifier, describing where it comes from.
                 type: string
+            modifier:
+                link: a_mod
     aa_mod:
         desc: An Object used to specify how a specific attribute should be modified. Basically an Attribute Modifier with an additional attribute field.
         href: https://origins.readthedocs.io/en/1.8.1/types/data_types/attributed_attribute_modifier/
@@ -4177,6 +4179,8 @@ links:
             name:
                 desc: (Optional) A descriptive name for the modifier, describing where it comes from.
                 type: string
+            modifier:
+                link: aa_mod
     hud_render:
         desc: An Object used to define how a resource or cooldown bar should be rendered.
         href: https://origins.readthedocs.io/en/1.8.1/types/data_types/hud_render/
