--- a/15/powers.yaml
+++ b/15/powers.yaml
@@ -4654,9 +4654,9 @@ links:
                     desc: The namespace and ID of the sound to play.
                     type: string
                     allow: '*a-z0-9_#\/:.-'
-                  - name: list
-                    type: list
-                    vals:
+                  - name: object
+                    type: object
+                    props:
                         sound:
                             desc: The namespace and ID of the sound to play.
                             type: string
