--- a/15/powers.yaml
+++ b/15/powers.yaml
@@ -2185,7 +2185,7 @@ links:
                         string-origins:holder_action:
                             action:
                                 desc: The action to execute on the holder of the item.
-                                link: item_action
+                                link: entity_action
           - title: custom
             link: custom_action
     block_action:
