--- a/15/powers.yaml
+++ b/15/powers.yaml
@@ -2244,7 +2244,7 @@ links:
                         string-origins:holder_action:
                             action:
                                 desc: The action to execute on the holder of the item.
-                                link: item_action
+                                link: entity_action
                         string-apugli:cooldown:
                             ticks:
                                 desc: The amount of ticks that the cooldown should be active for.
