--- a/18/powers.yaml
+++ b/18/powers.yaml
@@ -1884,8 +1884,7 @@ links:
                         string-origins:modify_stat:
                             stat:
                                 desc: The statistic to modify.
-                                type: string
-                                href: https://minecraft.wiki/w/Statistics#Resource_location
+                                link: stat
                             modifier:
                                 desc: The modifier to apply to the given stat.
                                 link: a_mod
@@ -4949,6 +4948,16 @@ links:
           - velocity_normalized
           - velocity_horizontal
           - velocity_horizontal_normalized
+    stat:
+        type: object
+        href: https://minecraft.wiki/w/Statistics#Resource_location
+        props:
+            type:
+                type: string
+                allow: 'a-z0-9_:.-'
+            id:
+                type: string
+                allow: 'a-z0-9_:.-'
 hooks: [preserve_single]
 or:
   - title: simple
